# cpp_databases

./: CMakeLists.txt  NoSQL  README.md  compie.sh  compile.sh  dbcomm  main.cpp  mongoManager.cpp  mongoManager.hpp  mysql_con  urm.py
cmake/: FindMySQL.cmake
src/: database.cpp  database.hpp  main.cpp
src/argparser/: argparser.cpp  argparser.hpp
src/args/: args.cpp  args.hpp
src/client/: client.cpp  client.hpp
src/database/: database.cpp  database.hpp  databaseMySQL.cpp  databaseMySQL.hpp  mongoManager.cpp  mongoManager.hpp
src/sensor/: sensor.cpp  sensor.hpp
src/serial/: serial.cpp  serial.hpp
src/server/: server.cpp  server.hpp
src/urm_37/: urm_37.cpp  urm_37.hpp
